2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (get_fsusage): New function to the filesystem
	  usage
	* common-src/amutil.h (get_fsusage): Add prototype.
	 common-src/amxml.c: Cleanup
	* server-src/diskfile.c (xml_optionstr_disk, xml_estimate_disk,
	  xml_application_disk): New functions to return anxnl string
	* server-src/diskfile.h (xml_optionstr_disk, xml_estimate_disk,
	  xml_application_disk): Add prototypes
	* perl/Amanda/Disklist.swg (xml_optionstr_disk, xml_application_disk,
	  xml_estimate_disk): Swig these functions
	* perl/Amanda/Logfile.swg (log_start_multiline, log_end_multiline):
	  Swig these functions
	* perl/Amanda/Util.swg (amxml_format_tag, get_fsusage,
	  get_time_from_timestamp): Swig these functions

2015-12-ouis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Add fe_restore_prev_next_level
	* common-src/amfeatures.c: Add fe_restore_prev_next_level
	* server-src/amfetchdump.pl: Add --prev-level and --next-level
	  arguments
	* man/xml-source/amfetchdump.8.xml: Document --prev-level and
	  --next-level argument
	* perl/Amanda/Extract.pm (run_scripts): New method to run scripts
	* perl/Amanda/FetchDump.pm: Keep copy of prev-level and next-level
	* perl/Amanda/FetchDump/Application.pm: Fix race
	* perl/Amanda/FetchDump/ClientApplication.pm: Send PREV-NEXT-LEVEL to
	  client, fix race
	* perl/Amanda/Restore.pm: Call feedback run_pre_scripts and
	  run_post_scripts
	* perl/Amanda/Service/Restore.pm: Get PREV-NEXT-LEVEL from server,
	  call $extract->run_scripts() to run the scrips

2015-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h (fe_restore_include,
	  fe_restore_include_glob, fe_restore_exclude,
	  fe_restore_exclude_glob): New amfeature to send include/exclude to
	  the restore service
	* common-src/amfeatures.c: Add new amfeature
	* server-src/amfetchdump.pl: New arguments: --include-file,
	  --include-list, --include-list-glob, --exclude-file, --exclude-list,